add Variation of theTower of Hanoi

--- a/dfs_and_bfs/math/汉诺塔.md
+++ b/dfs_and_bfs/math/汉诺塔.md
@@ -38,3 +38,16 @@ U(n) = 2U(n-1)
 即，U(n) = 2^n
 F(n) = 2^n - 1
 
+
+### 5. 汉诺塔问题的变种
+问题：把n个圆盘组成的塔从A杆移动到B杆，如果A和B之间直接移动是不允许的，找出移动的最短序列。
+（每次移动一定是移动到中间杆或者从中间杆移除，照例，较大的盘一定不能出现在一个较小的盘上）
+
+推导：
+假设把A种有n个圆盘移动到B需要F(n)步，那么n-1个圆盘移动到B需要F(n-1)步
+则，A到B的过程可以是先把n-1个盘放到B，然后把最大的放到中间盘，在把n-1放回A，最大盘从中间放到
+B，在把n-1放到B，推导出公式：
+F(n) = F(n-1) + 1 + F(n-1) + 1 + F(n-1)
+公式两边同时+1
+F(n) + 1 = 3(F(n-1) + 1)
+得出 F(n) = 3^n - 1
