--- a/dfs_and_bfs/math/平面中的直线.md
+++ b/dfs_and_bfs/math/平面中的直线.md
@@ -25,3 +25,11 @@
 - L(n) = 1 + n(n+1) /2 (n >= 0)
 
 计算验证 L(n) = L(n-1) + n = (1/2*n*(n-1) + n)  + 1= 1 + n(n+1) /2
+
+### 4. 平面中n条直线确定的有些区域是无限的，而其他的区域是有界的，有界区域的最大可能是多少？
+- 第三条直接和另外两条直线相交2点的情况下，有界区域是2-1（3-1-1）的情况
+- 第四条直接最多和另外三条直接相交3点，产生的有界区域是3-1 （4-1-1）
+- 第n条直线最多和另外n-1条中间相交n-1点，产生的有界区域是n-1-1
+- 归纳得到产生有界区域得(n-2) + (n-3)+....+1 = (n-1)(n-2) / 2
+- 假设所有区域个数为L(n)，有上面可知L(n) = 1 + n(n+1) /2,无界区域个数为L(n)-(n-1)(n-2) / 2 = 2n
+- 有界区域可以用L(n) - 2n表示
