add zigzag line

--- a/dfs_and_bfs/math/平面中的直线.md
+++ b/dfs_and_bfs/math/平面中的直线.md
@@ -33,3 +33,9 @@
 - 归纳得到产生有界区域得(n-2) + (n-3)+....+1 = (n-1)(n-2) / 2
 - 假设所有区域个数为L(n)，有上面可知L(n) = 1 + n(n+1) /2,无界区域个数为L(n)-(n-1)(n-2) / 2 = 2n
 - 有界区域可以用L(n) - 2n表示
+
+### 5. 由n个锯齿形线可确定的最大区域数
+![](https://github.com/lsill/leetcode/blob/main/dfs_and_bfs/math/picture/line1.jpg)
+- 一对锯齿形线最多相交9个点，新增的区域数为1 + 9 * 2 - 8 = 12
+- 那么n对锯齿形 Z(n) = Z(n-1) + 9*n -8
+- 递归公式得Z(n) = 9(S(n)) -8n + 1
